--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-
-
-
+h1{
+    text-align: center;
+    color: magenta;
+}
+.flexbox-container {
+    display: flex;
+    justify-content: flex-start;
+}
 
 .flexbox-item {
     width: 200px;
