Align-items Baseline

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ h1{
 }
 .flexbox-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: baseline;
 }
 
 .flexbox-item {
