--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ h1{
 }
 .flexbox-container {
     display: flex;
-    justify-content: space-around;
-    align-items: stretch;
+    background-color: yellow;
 }
 
 .flexbox-item {
@@ -17,12 +16,15 @@ h1{
 
 .flexbox-item-1 {
     min-height: 100px;
+    flex-shrink: 0;
 }
 
 .flexbox-item-2{
     min-height: 200px;
+    flex-grow: 2;
 }
 
 .flexbox-item-3{
     min-height: 300px;
+    flex-grow: 1;
 }
